--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,12 @@
 * {
     font-size: 10px;
 }
+
+body {
+    background: #4c1741;
+}
+
+.navbar-brand {
+    font-size: 3rem;
+    color: #76e5fc !important;
+}
