--- a/assets/style.css
+++ b/assets/style.css
@@ -40,3 +40,11 @@ body {
     margin: .5rem auto;
     text-align: center;
 }
+ h2 {
+    font-size: 2rem;
+    color: #76e5fc !important;
+}
+p {
+    font-size: 2rem;
+    color: #76e5fc !important;
+}
