--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,46 +1,10 @@
 * {
     font-size: 10px;
 }
-            /*------------body---------*/
 body {
     background: #4c1741;
 }
-                     /*------navbar------*/
-.navbar-brand {
-    font-size: 3rem;
-}
-
-.navbar-nav .nav-link {
-    font-size: 2rem;
-    color: #76e5fc !important;
-}
-
-.navbar-light .navbar-toggler {
-    color: #76e5fc;
-    border-color: #76e5fc;
-}
-
-.navbar-light .navbar-toggler {
-    color: #76e5fc;
-    border-color: #76e5fc;
-}
-.navbar-nav .nav-link:hover {
-    font-size: 3rem;
-}
-                    /*---------homepage-------*/
-.home-page {
-    font-size: 2rem;
-    color: #9dacff;
-}
-
-.main-tagline em{
-    font-size: 5rem;
-    font-weight: 200;
-    color: #4bc0d9;
-    margin: .5rem auto;
-    text-align: center;
-}
- h2 {
+h2 {
     font-size: 2rem;
     color: #76e5fc !important;
 }
@@ -48,12 +12,35 @@ p {
     font-size: 2rem;
     color: #76e5fc !important;
 }
-
 .container {
     background: #5c2751;
 }
-
-                       /*----------footer------*/
+.navbar-brand {
+    font-size: 3rem;
+    color: #76e5fc !important;
+}
+.navbar-nav .nav-link {
+    font-size: 2rem;
+    color: #76e5fc !important;
+}
+.navbar-light .navbar-toggler {
+    color: #76e5fc;
+    border-color: #76e5fc;
+}
+.navbar-nav .nav-link:hover {
+    font-size: 3rem;
+}
+.home-page {
+    font-size: 2rem;
+    color: #9dacff;
+}
+.main-tagline em{
+    font-size: 5rem;
+    font-weight: 200;
+    color: #4bc0d9;
+    margin: .5rem auto;
+    text-align: center;
+}
 .footer {
     font-size: 1.5rem;
     color: #76e5fc !important;
@@ -61,4 +48,14 @@ p {
 .bordered {
     border: solid 1px #76e5fc;
     border-radius: 1rem;
+}
+.image img{
+    margin: 1rem auto;
+    display: block;
+    width: 100%;
+    height: auto;
+}
+.md-form label {
+    font-size: 2rem;
+    color: #76e5fc !important;
 }
