--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 * {
     font-size: 10px;
 }
+         /*--------------body------------*/
 body {
     background: #4c1741;
 }
@@ -15,6 +16,7 @@ p {
 .container {
     background: #5c2751;
 }
+       /*--------------navbar---------------*/
 .navbar-brand {
     font-size: 3rem;
     color: #76e5fc !important;
@@ -30,6 +32,7 @@ p {
 .navbar-nav .nav-link:hover {
     font-size: 3rem;
 }
+              /*---------homepage-----------*/   
 .home-page {
     font-size: 2rem;
     color: #9dacff;
@@ -41,6 +44,7 @@ p {
     margin: .5rem auto;
     text-align: center;
 }
+             /*-------------footer--------------*/
 .footer {
     font-size: 1.5rem;
     color: #76e5fc !important;
@@ -49,6 +53,7 @@ p {
     border: solid 1px #76e5fc;
     border-radius: 1rem;
 }
+            /*------------image-----------------*/
 .image img{
     margin: 1rem auto;
     display: block;
