--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ p  {
     border-color: #76e5fc;
 }
 .navbar-nav .nav-link:hover {
-    font-size: 3rem;
+   color: #99ffff !important;
 }
               /*---------homepage-----------*/   
 .home-page {
@@ -59,6 +59,7 @@ ul li  {
     border: solid 1px #76e5fc;
     border-radius: 1rem;
 }
+
 .fa {
     font-size:3rem;
     color: #76e5fc;
