--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Arial:ital,wght@1,700&display=swap 100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
-
 * {
     font-size: 10px;
 }
-         /*--------------body------------*/
+         /*---body---*/
 body {
     background: #4c1741;
 }
@@ -18,7 +16,7 @@ p  {
 .container {
     background: #5c2751;
 }
-       /*--------------navbar---------------*/
+       /*---navbar---*/
 .navbar-brand {
     font-size: 3rem;
     color: #76e5fc !important;
@@ -34,7 +32,7 @@ p  {
 .navbar-nav .nav-link:hover {
    color: #99ffff !important;
 }
-              /*---------homepage-----------*/   
+              /*---homepage---*/   
 .home-page {
     font-size: 2rem;
     color: #9dacff;
@@ -50,39 +48,8 @@ ul li  {
     font-size: 2rem;
     color: #76e5fc !important;
 }
-body {font-family: Arial, Helvetica, sans-serif;}
-* {box-sizing: border-box;}
 
-input[type=text], select, textarea {
-  width: 100%;
-  padding: 1.2rem;
-  border: 1px solid #ccc;
-  border-radius: 0.4rem;
-  box-sizing: border-box;
-  margin-top: 0.6rem;
-  margin-bottom: 1.6rem;
-  resize: vertical;
-}
-
-input[type=submit] {
-  background-color: #4CAF50;
-  color: white;
-  padding: 1.2rem 2rem;
-  border: none;
-  border-radius: 0.4rem;
-  cursor: pointer;
-}
-
-input[type=submit]:hover {
-  background-color: #45a049;
-}
-
-.container {
-  border-radius: 0.5rem;
-  padding: 2rem;
-}
-
-             /*-------------footer--------------*/
+             /*---footer---*/
 .footer {
     font-size: 1.5rem;
     color: #76e5fc !important;
@@ -100,7 +67,7 @@ input[type=submit]:hover {
     font-size: 2rem;
     color: #76e5fc !important;
 }
-            /*------------image-----------------*/
+            /*---image----*/
 .image img{
     margin: 1rem auto;
     display: block;
